@@ -1752,11 +1752,6 @@ OperationResult transaction::Methods::insertLocal(std::string const& collectionN
       if (!followerInfo->allowedToWrite()) {
         // We cannot fulfill minimum replication Factor.
         // Reject write.
-        LOG_TOPIC("d7306", ERR, Logger::REPLICATION)
-            << "Less then minReplicationFactor "
-            << basics::StringUtils::itoa(collection->minReplicationFactor())
-            << " followers in sync. Shard  " << collection->name()
-            << " is temporarily in read-only mode.";
         return OperationResult(TRI_ERROR_ARANGO_READ_ONLY, options);
       }
 
@@ -2082,11 +2077,6 @@ OperationResult transaction::Methods::modifyLocal(std::string const& collectionN
       if (!followerInfo->allowedToWrite()) {
         // We cannot fulfill minimum replication Factor.
         // Reject write.
-        LOG_TOPIC("2e35a", ERR, Logger::REPLICATION)
-            << "Less then minReplicationFactor "
-            << basics::StringUtils::itoa(collection->minReplicationFactor())
-            << " followers in sync. Shard  " << collection->name()
-            << " is temporarily in read-only mode.";
         return OperationResult(TRI_ERROR_ARANGO_READ_ONLY, options);
       }
 
@@ -2362,11 +2352,6 @@ OperationResult transaction::Methods::removeLocal(std::string const& collectionN
       if (!followerInfo->allowedToWrite()) {
         // We cannot fulfill minimum replication Factor.
         // Reject write.
-        LOG_TOPIC("f1f8e", ERR, Logger::REPLICATION)
-            << "Less then minReplicationFactor "
-            << basics::StringUtils::itoa(collection->minReplicationFactor())
-            << " followers in sync. Shard  " << collection->name()
-            << " is temporarily in read-only mode.";
         return OperationResult(TRI_ERROR_ARANGO_READ_ONLY, options);
       }
 
@@ -2597,11 +2582,6 @@ OperationResult transaction::Methods::truncateLocal(std::string const& collectio
       if (!followerInfo->allowedToWrite()) {
         // We cannot fulfill minimum replication Factor.
         // Reject write.
-        LOG_TOPIC("7c1d4", ERR, Logger::REPLICATION)
-            << "Less then minReplicationFactor "
-            << basics::StringUtils::itoa(collection->minReplicationFactor())
-            << " followers in sync. Shard  " << collection->name()
-            << " is temporarily in read-only mode.";
         return OperationResult(TRI_ERROR_ARANGO_READ_ONLY, options);
       }
 
